--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,18 +4,25 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - name: Checkout code
         uses: actions/checkout@v2
-      - run: |
-          ls ${{ github.workspace }}
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v1
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          push: false
-          tags: user/app:latest
-      - run: |
-          docker images
-
+          push: true
+          tags: 363863453423.dkr.ecr.eu-central-1.amazonaws.com/test:latest
